--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
+  "homepage":".",
   "private": true,
   "name": "masterPortfolio",
   "version": "0.1.0",
-  "homepage": ".",
   "scripts": {
     "build": "react-scripts --openssl-legacy-provider build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject",
     "start": "react-scripts --openssl-legacy-provider start",
     "test": "react-scripts test"
